Shifted js to external file

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,24 +23,6 @@
 	</div>
 	<div onclick="hidesidebar();" class="everythingelse">
 	</div>
-	<script>
-	var sidebarstate = "Closed";
-	function togglesidebar() {
-		if (sidebarstate === "Closed") {
-			document.getElementsByClassName("sidebar")[0].style.left = "0px";
-			document.getElementsByClassName("side-icon")[0].style.marginLeft = "300px";
-			sidebarstate = "Open";
-		} else {
-			document.getElementsByClassName("sidebar")[0].style.left = "-300px";
-			document.getElementsByClassName("side-icon")[0].style.marginLeft = "50px";
-			sidebarstate = "Closed";
-		}
-	}
-	function hidesidebar() {
-			document.getElementsByClassName("sidebar")[0].style.left = "-300px";
-			document.getElementsByClassName("side-icon")[0].style.marginLeft = "50px";
-			sidebarstate = "Closed";
-	}
-	</script>
+	<script src="/static/js/script.js"></script>
 </body>
 </html>
