--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 html,body {
 	width:100%;
-	background-color: #FFF;
+	background-image:url('/static/images/escheresque.png');
 }
 .header {
 	width:100%;
@@ -10,6 +10,17 @@ html,body {
 	top:0;
 	left:0;
 	transition-duration:0.7s;
+}
+
+.navfix {
+	height: 130px;
+}
+.options {
+	font-size: 100px;
+	color:#FFF;
+}
+.options:hover {
+	cursor:pointer;
 }
 #brand {
 	display:block;
@@ -47,5 +58,49 @@ html,body {
 	top:0px;
 	left:-300px;
 	transition-duration:0.7s;
-	border-right: 3px solid #FFB072;
+	z-index: 10;
+}
+#option1{
+	background-color: #68DB62;
+}
+#option1:hover{
+	background-color: #43CE3B;
+}
+#option1:active{
+	background-color: #0D9F05;
+    -webkit-box-shadow:inset 0 6px 10px rgba(0,0,0,.125);
+    box-shadow:inset 0 3px 5px rgba(0,0,0,.125);
+}
+#option2{
+	background-color: #50B4B1;
+}
+#option2:hover {
+	background-color: #2C9B96;
+}
+#option2:active {
+	background-color: #047773 ;
+	-webkit-box-shadow:inset 0 6px 10px rgba(0,0,0,.125);
+    box-shadow:inset 0 3px 5px rgba(0,0,0,.125);
+}
+#option3{
+	background-color: #FD7174;
+}
+#option3:hover {
+	background-color: #FC484D;
+}
+#option3:active {
+	background-color: #C3060B;
+	-webkit-box-shadow:inset 0 6px 10px rgba(0,0,0,.125);
+    box-shadow:inset 0 3px 5px rgba(0,0,0,.125);
+}
+#option4{
+	background-color: #FFB072;
+}
+#option4:hover {
+	background-color: #FE9A49;
+}
+#option4:active {
+	background-color: #C45B06 ;
+	-webkit-box-shadow:inset 0 6px 10px rgba(0,0,0,.125);
+    box-shadow:inset 0 3px 5px rgba(0,0,0,.125);
 }
