--- a/templates/index.html
+++ b/templates/index.html
@@ -180,5 +180,24 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
 	<script src="/static/js/script.js"></script>
+	<script>
+	   var sidebarstate = "Closed";
+	   function togglesidebar() {
+           if (sidebarstate === "Closed") {
+               document.getElementsByClassName("sidebar")[0].style.left = "0px";
+               document.getElementsByClassName("side-icon")[0].style.marginLeft = "300px";
+               sidebarstate = "Open";
+           } else {
+               document.getElementsByClassName("sidebar")[0].style.left = "-300px";
+               document.getElementsByClassName("side-icon")[0].style.marginLeft = "50px";
+               sidebarstate = "Closed";
+           }
+       }
+        function hidesidebar() {
+            document.getElementsByClassName("sidebar")[0].style.left = "-300px";
+			document.getElementsByClassName("side-icon")[0].style.marginLeft = "50px";
+			sidebarstate = "Closed";
+        }
+    </script>
 </body>
 </html>
