--- a/templates/index.html
+++ b/templates/index.html
@@ -1,208 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Edison</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-</head>
+    <title>NPS-I Elections</title>
 
-<body>
-    <div class="sidebar">
-    </div>
-    <div class="header">
-        <div onclick="togglesidebar();" class="side-icon">
-            <div class="strip"></div>
-            <div class="strip"></div>
-            <div class="strip"></div>
+    <!-- Bootstrap core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Custom styles for this template -->
+    <link href="/static/css/jumbotron-narrow.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/candidates">Candidates</a></li>
+            <li role="presentation"><a href="#">Elections</a></li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">NPS Indiranagar Elections</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1>Lets elect the leaders of tomorrow.</h1>
+        <p class="lead">This application has been built to hold the <strong>perfect elections</strong> for the <strong>perfect school</strong>.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Start Elections Now!</a></p>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-4">
+          <h4>Simple Design</h4>
+          <p>This app has a simple design, to ensure optimum user experience..</p>
         </div>
-        <div onclick="hidesidebar();" class="everythingelse">
-            <div id="brand">
-                Edison
-            </div>
-        </div>
-    </div>
-    <div onclick="hidesidebar();" class="everythingelse">
-        <div class="navfix"></div>
-        <div class="container">
-            <div class="row">
-                <div id="option1" class="text-center well col-md-5 col-xs-12 options">
-                    <span class="glyphicon glyphicon-play"></span>
-                    <h2>Start Election</h2>
-                </div>
-                <div onclick="getcandidates();" id="option2" class="text-center well col-md-5 col-md-offset-2 col-xs-12 options">
-                    <span class="glyphicon glyphicon-user"></span>
-                    <h2>Candidate List</h2>
-                </div>
-                <div id="option3" class="text-center well col-md-5 col-xs-12 options">
-                    <span class="glyphicon glyphicon-stats"></span>
-                    <h2>View Previous Results</h2>
-                </div>
-                <div id="option4" class="text-center well col-md-5 col-md-offset-2 col-xs-12 options">
-                    <span class="glyphicon glyphicon-wrench"></span>
-                    <h2>Settings</h2>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel"></h4>
-                    </div>
-                    <div id="modalcontent" class="modal-body">
-                        <ul class="nav nav-tabs">
-                            <li role="presentation" class="active"><a href="#SchoolElections" aria-controls="SchoolElections" data-toggle="tab">School Elections</a></li>
-                            <li role="presentation"><a href="#HouseElections" aria-controls="HouseElections" data-toggle="tab">House Elections</a></li>
-                        </ul>
-                        <div class="tab-content">
-                            <div role="tabpanel" class="tab-pane active fade in" id="SchoolElections">
-                                <ul class="nav nav-pills nav-stacked">
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapsePrefect" aria-expanded="false" aria-controls="collapsePrefect">Prefect</a></li>
-                                    <div class="collapse" id="collapsePrefect">
-                                        <div id="PrefectCandidates" class="well">
-                                            <button type="button" class="btn btn-success">Add Prefect Candidate</button>
-                                        </div>
-                                    </div>
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapseVPrefectM" aria-expanded="false" aria-controls="collapseVPrefectM">Vice-Prefect Male</a></li>
-                                    <div class="collapse" id="collapseVPrefectM">
-                                        <div id="VPrefectMCandidates" class="well">
-                                            <button type="button" class="btn btn-success">Add Vice-Prefect Male Candidate</button>
-                                        </div>
-                                    </div>
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapseVPrefectF" aria-expanded="false" aria-controls="collapseVPrefectF">Vice-Prefect Female</a></li>
-                                    <div class="collapse" id="collapseVPrefectF">
-                                        <div id="VPrefectFCandidates" class="well">
-                                            <button type="button" class="btn btn-success">Add Vice-Prefect Female Candidate</button>
-                                        </div>
-                                    </div>
-                                </ul>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="HouseElections">
-                                <ul class="nav nav-pills nav-stacked">
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapseChallengers" aria-expanded="false" aria-controls="collapseChallengers">Challengers</a></li>
-                                    <div class="collapse" id="collapseChallengers">
-                                        <div id="ChallengersCandidates" class="well">
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Challengers Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Challengers Vice-Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Vice-Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapseExplorers" aria-expanded="false" aria-controls="collapseExplorers">Explorers</a></li>
-                                    <div class="collapse" id="collapseExplorers">
-                                        <div id="ExplorersCandidates" class="well">
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Explorers Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Explorers Vice-Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Vice-Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapsePioneers" aria-expanded="false" aria-controls="collapsePioneers">Pioneers</a></li>
-                                    <div class="collapse" id="collapsePioneers">
-                                        <div id="PioneersCandidates" class="well">
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Pioneers Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Pioneers Vice-Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Vice-Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <li role="presentation"><a role="button" data-toggle="collapse" href="#collapseVoyagers" aria-expanded="false" aria-controls="collapseVoyagers">Voyagers</a></li>
-                                    <div class="collapse" id="collapseVoyagers">
-                                        <div id="VoyagersCandidates" class="well">
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Voyagers Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading">
-                                                    <h3 class="panel-title">Voyagers Vice-Captain Candidates</h3>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <button type="button" class="btn btn-success">Add Vice-Captain Candidate</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/script.js"></script>
-    <script>
-        var sidebarstate = "Closed";
 
-        function togglesidebar() {
-            if (sidebarstate === "Closed") {
-                document.getElementsByClassName("sidebar")[0].style.left = "0px";
-                document.getElementsByClassName("side-icon")[0].style.marginLeft = "300px";
-                sidebarstate = "Open";
-            } else {
-                document.getElementsByClassName("sidebar")[0].style.left = "-300px";
-                document.getElementsByClassName("side-icon")[0].style.marginLeft = "50px";
-                sidebarstate = "Closed";
-            }
-        }
+        <div class="col-lg-4">
+          <h4>Blazingly Fast</h4>
+          <p>We know time is the most precious resource and this app ensures that the elections are a smooth process.</p>
+        </div>
+        
+        <div class="col-lg-4">
+        	<h4>Security First.</h4>
+          <p>This app uses latest encryption technology to ensure your election data stays safe</p>
+        </div>
+      </div>
 
-        function hidesidebar() {
-            document.getElementsByClassName("sidebar")[0].style.left = "-300px";
-            document.getElementsByClassName("side-icon")[0].style.marginLeft = "50px";
-            sidebarstate = "Closed";
-        }
-    </script>
-</body>
+      <footer class="footer">
+        <p>&copy; Built by Rishit Bansal (@thebongy) and Muktaka Joshipura (@TheOriginalMuktaka) for only NPS-I purposes.</p>
+      </footer>
 
+    </div> <!-- /container -->
+
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  </body>
 </html>
