--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -38,7 +38,8 @@
 			<h3 class="text-muted">NPS Indiranagar Elections</h3>
 		</div>
 
-		<div id="a"></div>
+		<div id="container"></div>
+	</div>
 </body>
 
 </html>
