--- a/templates/elections.html
+++ b/templates/elections.html
@@ -6,7 +6,7 @@
 	<link href="/static/css/slide.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -15,10 +15,10 @@
 		<h1>National Public School Indiranagar</h1>
 	</div>
 	<div id="left_hover"></div>
-	<div id="left"><i class="fa fa-chevron-left" id="left_button" aria-hidden="true"></i></div>
+	<div id="left"><button id="left_button"> 	&#60;</button></div>
 	<div id="viewport"></div>
 	<div id="right_hover"></div>
-	<div id="right"><i class="fa fa-chevron-right" id="right_button" aria-hidden="true"></i></div>
+	<div id="right"><button id = "right_button"> 	&#62;</button></div>
 	<script src="/static/js/slides.js"></script>
 	<script src="/static/js/poll.js"></script>
 	<script>
@@ -41,7 +41,7 @@ window.onload = xhr.send();
 
 
 			function createPolls() {
-				data.values.forEach(function (pollValue, index) {
+				data.polls.forEach(function (pollValue, index) {
 					polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
 					for (candidate in pollValue.candidates) {
 						polls[index].addCandidate(pollValue.candidates[candidate]);
