--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -76,45 +76,18 @@ html, body {
 	 background:none;
   border:none;
 }
+.head_cont {
+	width:70%;
+}
 .slide {
-	position:absolute;
-	top:0;
 	transition-duration:0.5s;
 }
-.flex-container, .slide,.flex-container-h {
+.full-size, .slide{
 	width:100%;
 	height:100%;
-}
-.flex-container {
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    justify-content: center;
-}
-.flex-container-h {
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    justify-content: center;
-}
-
-.title_top {
-	margin-top:30px;
-}
-.flex-top {
-	align-items:flex-start;
-}
-.flex-center {
-	width:70%;
+	position:absolute;
+	top:0;
+	left:0;
 }
 
 .text-center {
