--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -64,9 +64,11 @@ html, body {
 	 background:none;
   border:none;
   font-weight:900;
+  outline:none;
 }
 #left_button:active, #right_button:active {
 	border:none;
+	outline:none;
 }
 #right_button {
 	color:#FFF;
@@ -75,6 +77,7 @@ html, body {
 	font-weight:900;
 	 background:none;
   border:none;
+  outline:none;
 }
 .head_cont {
 	width:70%;
