--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -74,8 +74,23 @@ html, body {
 	margin-top:20px;
 	width:100%;
 }
-
+.cand-name {
+	color:#FFF;
+	position:absolute;
+	bottom:0;
+	width:100%;
+	text-align:center;
+	font-size:40px;
+	padding-top:10px;
+	padding-bottom:10px;
+	background-color:#808080;
+	border-style:solid;
+	border-width:2px;
+	border-radius:10px;
+	border-color:#FFF;
+}
 .candidate {
+	position:relative;
 	float:left;
 	border-style:solid;
 	border-width:2px;
