--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -80,7 +80,8 @@ html, body {
 	bottom:0;
 	width:100%;
 	text-align:center;
-	font-size:40px;
+	font-size:35px;
+	font-size:2.3vw;
 	padding-top:10px;
 	padding-bottom:10px;
 	background-color:#808080;
