--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -74,6 +74,15 @@ html, body {
 	margin-top:20px;
 	width:100%;
 }
+.cand-image {
+ position: absolute;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    margin: auto;
+	height:100%;
+}
 .cand-name {
 	color:#FFF;
 	position:absolute;
@@ -85,6 +94,7 @@ html, body {
 	padding-top:10px;
 	padding-bottom:10px;
 	background-color:#808080;
+	background-color:rgba(128, 128, 128,0.9);
 	border-style:solid;
 	border-width:2px;
 	border-radius:10px;
@@ -92,6 +102,7 @@ html, body {
 }
 .candidate {
 	position:relative;
+	overflow:hidden;
 	float:left;
 	border-style:solid;
 	border-width:2px;
