--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -100,6 +100,9 @@ html, body {
 	border-radius:10px;
 	border-color:#FFF;
 }
+.start_btn {
+
+}
 .candidate {
 	position:relative;
 	overflow:hidden;
@@ -108,6 +111,19 @@ html, body {
 	border-width:2px;
 	border-radius:10px;
 	border-color:#FFF;
+	opacity:0.9;
+	transition-duration:0.2s;
+
+}
+.candidate_anim:hover {
+	opacity:1;
+}
+.candidate_anim:active {
+	border-color:#5cb85c;
+	border-width:5px;
+	-webkit-box-shadow: inset 0px 0px 21px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: inset 0px 0px 21px 0px rgba(0,0,0,0.75);
+box-shadow: inset 0px 0px 21px 0px rgba(0,0,0,0.75);
 }
 #right_button {
 	color:#FFF;
@@ -162,4 +178,5 @@ html, body {
 .title_top {
 	margin-top:10px;
 	width:100%;
+	position:relative;
 }
