--- a/templates/elections.html
+++ b/templates/elections.html
@@ -6,9 +6,6 @@
     <link href="/static/css/slide.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/plugins/CSSPlugin.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/easing/EasePack.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenLite.min.js"></script>
 </head>
 
 <body>
@@ -39,7 +36,9 @@
         xhr.open("GET", url, true);
         window.onload = xhr.send();
 
-
+				function start_elections(i) {
+					polls[i].start_elections();
+				}
         function createPolls() {
             data.polls.forEach(function(pollValue, index) {
                 polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
@@ -58,13 +57,13 @@
                     "subheading": polls[poll].message,
                     "b_col": polls[poll].backColor,
                     "t_col": polls[poll].foreColor
-                })
+                },polls[poll])
                 elections.newSlide("election", {
                     "heading": polls[poll].office + " Elections",
                     "b_col": polls[poll].backColor,
                     "t_col": polls[poll].foreColor,
                     "poll": polls[poll]
-                })
+                },polls[poll])
             }
 
             Id("left").onclick = function() {
