Here comes the real 'voting' part

--- a/templates/elections.html
+++ b/templates/elections.html
@@ -39,6 +39,10 @@
 				function start_elections(i) {
 					polls[i].start_elections();
 				}
+				
+				function vote_candidate(i,j) {
+					polls[i].vote(j);
+				}
         function createPolls() {
             data.polls.forEach(function(pollValue, index) {
                 polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
