Undo button disables on zero votes, UI shows no of votes registered

--- a/templates/elections.html
+++ b/templates/elections.html
@@ -43,6 +43,11 @@
 				function vote_candidate(i,j) {
 					polls[i].vote(j);
 				}
+				
+				function undo_vote(i) {
+					polls[i].undo();
+				}
+				
         function createPolls() {
             data.polls.forEach(function(pollValue, index) {
                 polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
