--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -39,6 +39,10 @@
 		</div>
 
 		<div id="container"></div>
+
+		<script>
+			var interface = new Interface('container');
+		</script>
 	</div>
 </body>
 
