--- a/templates/elections.html
+++ b/templates/elections.html
@@ -6,71 +6,99 @@
 	<link href="/static/css/slide.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 
 <body>
 	<div id="school_logo">
-		<img id="logo_pic" src="/static/images/logo_sml.png" />
-		<h1>National Public School Indiranagar</h1>
+		<img id="logo_pic" src="/static/images/logo_sml.png" style="vertical-align: middle" />
+		<h1 style="display: inline">National Public School Indiranagar</h1>
 	</div>
 	<div id="left_hover"></div>
-	<div id="left"><i class="fa fa-chevron-left" id="left_button" aria-hidden="true"></i></div>
+	<div id="left">
+		<button id="left_button"> &#60;</button>
+	</div>
 	<div id="viewport"></div>
 	<div id="right_hover"></div>
-	<div id="right"><i class="fa fa-chevron-right" id="right_button" aria-hidden="true"></i></div>
+	<div id="right">
+		<button id="right_button"> &#62;</button>
+	</div>
 	<script src="/static/js/slides.js"></script>
 	<script src="/static/js/poll.js"></script>
 	<script>
+		// ------------------------------------------------------------------------------------------------------------------
+		// POLL CREATION
+		var data, polls;
+		polls = [];
+		xhr = new XMLHttpRequest();
+		var url = "/getcandidates";
+		xhr.onreadystatechange = function () {
+			if (xhr.readyState == 4 && xhr.status == 200) {
+				data = JSON.parse(xhr.responseText);
+				createPolls();
+			}
+		};
+		xhr.open("GET", url, true);
+		window.onload = xhr.send();
 
 
-			// ------------------------------------------------------------------------------------------------------------------
-			// POLL CREATION
-			var data, polls;
-			polls = [];
-			xhr = new XMLHttpRequest();
-var url = "/getcandidates";
-xhr.onreadystatechange = function() {
-  if (xhr.readyState == 4 && xhr.status == 200) {
-    data = JSON.parse(xhr.responseText);
-    createPolls();
-  }
-};
-xhr.open("GET", url, true);
-window.onload = xhr.send();
+		function createPolls() {
+			data.polls.forEach(function (pollValue, index) {
+				polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
+				for (candidate in pollValue.candidates) {
+					polls[index].addCandidate(pollValue.candidates[candidate]);
+				}
+			});
+			createPresentation();
+		};
+		// ------------------------------------------------------------------------------------------------------------------
+		function createPresentation() {
+			var elections = new Presentation();
+			for (poll in polls) {
+				elections.newSlide("title", {
+					"heading": polls[poll].office + " Elections",
+					"subheading": polls[poll].message,
+					"b_col": polls[poll].backColor,
+					"t_col": polls[poll].foreColor
+				})
+			}
 
-
-			function createPolls() {
-				data.values.forEach(function (pollValue, index) {
-					polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
-					for (candidate in pollValue.candidates) {
-						polls[index].addCandidate(pollValue.candidates[candidate]);
-					}
-				});
-				createPresentation();
+			Id("left").onclick = function () {
+				elections.previousSlide();
+			}
+			Id("right").onclick = function () {
+				elections.nextSlide();
+			}
+			document.onkeydown = function (e) {
+				switch (e.keyCode) {
+				case 37: // Left key code
+					elections.previousSlide();
+					break;
+				case 39: // Right key code
+					elections.nextSlide();
+					break;
+				}
 			};
-			// ------------------------------------------------------------------------------------------------------------------
-			function createPresentation() {
-				var elections = new Presentation();
-				for (poll in polls) {
-					elections.newSlide("title", {
-						"heading": polls[poll].office + " Elections",
-						"subheading": polls[poll].message,
-						"b_col": polls[poll].backColor,
-						"t_col": polls[poll].foreColor
-					})
-				}
 
-			Id("left").onclick = function() {elections.previousSlide();}
-			Id("right").onclick = function() {elections.nextSlide();}
+			setTimeout(function () {
+				center();
+				elections.start()
+			}, 500)
+		}
+		// -------------------------------------------------------------------------------------------------------
 
-				elections.start();
-				}
-			// -------------------------------------------------------------------------------------------------------
+		function Id(Id) {
+			return document.getElementById(Id);
+		}
 
-		function Id(Id) {return document.getElementById(Id);}
-		function Cl(cl) {return document.getElementsByClassName(cl);}
-			
-		</script>
-	</body>
+		function Cl(cl) {
+			return document.getElementsByClassName(cl);
+		}
+
+		window.onresize = function () {
+			center();
+		};
+	</script>
+</body>
+
 </html>
