Functionality to end elections

--- a/templates/elections.html
+++ b/templates/elections.html
@@ -40,6 +40,10 @@
 					polls[i].start_elections();
 				}
 				
+				function end_elections(i) {
+					polls[i].end_elections();
+				}
+				
 				function vote_candidate(i,j) {
 					polls[i].vote(j);
 				}
