Temporary exit election warning. Conditional If to be added later

--- a/templates/elections.html
+++ b/templates/elections.html
@@ -130,6 +130,10 @@
                 fill_height_elem[i].style.height = (window.innerHeight - fill_height_elem[i].offsetTop) + "px";
             }
         }
+        
+        window.addEventListener('beforeunload', function (event) {
+	event.returnValue = 'Exitting in the middle of ongoing elections might result in loss of data. Continue?';
+});
     </script>
 </body>
 
