Removing multiple declaration of colours

--- a/templates/elections.html
+++ b/templates/elections.html
@@ -69,7 +69,8 @@
                     "heading": polls[poll].office + " Elections",
                     "subheading": polls[poll].message,
                     "b_col": polls[poll].backColor,
-                    "t_col": polls[poll].foreColor
+                    "t_col": polls[poll].foreColor,
+                    "poll":polls[poll]
                 },polls[poll])
                 elections.newSlide("election", {
                     "heading": polls[poll].office + " Elections",
