Improved 'Edison' theme and fixed some <head> tags'

--- a/templates/elections.html
+++ b/templates/elections.html
@@ -2,10 +2,20 @@
 <html>
 
 <head>
-	<title>SLIDE TEST</title>
+	<title>Edison - Elections</title>
+
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Conduct Elections">
+	<meta name="author" content="Rachit Verma, Rishit Bansal, Muktaka Joshipura">
+
 	<link href="/static/css/slide.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+
+	<script src="/static/js/slides.js"></script>
+	<script src="/static/js/poll.js"></script>
 </head>
 
 <body>
@@ -22,8 +32,6 @@
 	<div id="right">
 		<button id="right_button"> &#62;</button>
 	</div>
-	<script src="/static/js/slides.js"></script>
-	<script src="/static/js/poll.js"></script>
 	<script>
 		// ------------------------------------------------------------------------------------------------------------------
 		// POLL CREATION
