--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-	<title>NPS-I Elections</title>
+	<title>Edison - Choose Candidates</title>
 
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Choose Candidates">
+	<meta name="author" content="Rachit Verma, Rishit Bansal, Muktaka Joshipura">
 
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/jumbotron-narrow.css">
@@ -35,7 +36,7 @@
 					</li>
 				</ul>
 			</nav>
-			<h3 class="text-muted">NPS Indiranagar Elections</h3>
+			<h3 class="text-muted">Edison - Choose Candidates</h3>
 		</div>
 
 		<div id="container"></div>
