--- a/templates/index.html
+++ b/templates/index.html
@@ -1,72 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Home">
+	<meta name="author" content="Rachit Verma, Rishit Bansal, Muktaka Joshipura">
+	<link rel="icon" href="../../favicon.ico">
 
-    <title>NPS-I Elections</title>
+	<title>Edison - Home</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <link href="/static/css/jumbotron-narrow.css" rel="stylesheet">
+	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/css/jumbotron-narrow.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="header clearfix">
-            <nav>
-                <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="/">Home</a></li>
-                    <li role="presentation"><a href="/candidates">Candidates</a></li>
-                    <li role="presentation"><a href="/elections">Elections</a></li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">NPS Indiranagar Elections</h3>
-        </div>
+	<div class="container">
+		<div class="header clearfix">
+			<nav>
+				<ul class="nav nav-pills pull-right">
+					<li role="presentation" class="active"><a href="/">Home</a></li>
+					<li role="presentation"><a href="/candidates">Candidates</a></li>
+					<li role="presentation"><a href="/elections">Elections</a></li>
+				</ul>
+			</nav>
+			<h3 class="text-muted">Edison - Home</h3>
+		</div>
 
-        <div class="jumbotron">
-            <h1>Lets elect the leaders of tomorrow.</h1>
-            <p class="lead">This application has been built to hold the <strong>perfect elections</strong> for the <strong>perfect school</strong>.</p>
-            <p><a class="btn btn-lg btn-success" href="/elections" role="button">Start Elections Now!</a></p>
-        </div>
+		<div class="jumbotron">
+			<h1>Lets elect the leaders of tomorrow.</h1>
+			<p class="lead">This application has been built to hold the <strong>perfect elections</strong> for the <strong>perfect school</strong>.</p>
+			<p><a class="btn btn-lg btn-success" href="/elections" role="button">Start Elections Now!</a></p>
+		</div>
 
-        <div class="row marketing">
-            <div class="col-lg-4">
-                <h4>Simple Design</h4>
-                <p>This app has a simple design, to ensure an optimum user experience.</p>
-            </div>
+		<div class="row marketing">
+			<div class="col-lg-4">
+				<h4>Simple Design</h4>
+				<p>This app has a simple design, to ensure an optimum user experience.</p>
+			</div>
 
-            <div class="col-lg-4">
-                <h4>Blazingly Fast</h4>
-                <p>We know time is the most precious resource so this app ensures that elections are a smooth process.</p>
-            </div>
+			<div class="col-lg-4">
+				<h4>Blazingly Fast</h4>
+				<p>We know time is the most precious resource so this app ensures that elections are a smooth process.</p>
+			</div>
 
-            <div class="col-lg-4">
-                <h4>Security First.</h4>
-                <p>This app uses latest encryption technology to ensure your election data stays safe</p>
-            </div>
-        </div>
+			<div class="col-lg-4">
+				<h4>Security First.</h4>
+				<p>This app uses latest encryption technology to ensure your election data stays safe</p>
+			</div>
+		</div>
 
-        <footer class="footer">
-            <p>&copy; Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@TheOriginalMuktaka) for only NPS-I purposes.</p>
-        </footer>
+		<footer class="footer">
+			<p>&copy; Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) for only NPS-I purposes.</p>
+		</footer>
 
-    </div>
-    <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	</div>
 </body>
 
 </html>
