--- a/templates/elections.html
+++ b/templates/elections.html
@@ -149,7 +149,7 @@
 		}
 
 		window.addEventListener('beforeunload', function (event) {
-			event.returnValue = 'Exitting in the middle of ongoing elections might result in loss of data. Continue?';
+			event.returnValue = 'Exiting in the middle of ongoing elections might result in loss of data. Continue?';
 		});
 	</script>
 </body>
