Major design and code revamp. Check localhost:8080/elections2'

--- a/templates/elections2.html
+++ b/templates/elections2.html
@@ -10,9 +10,9 @@
 	<meta name='description' content='Conduct Elections'>
 	<meta name='author' content='Rachit Verma, Rishit Bansal, Muktaka Joshipura'>
 
-	<link href='/static/css/slide.css' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link rel='stylesheet' href='/static/css/bootstrap.min.css'>
+	<link href='/static/css/FirstInterface.css' rel='stylesheet'>
 
 	<script src='/static/js/poll2.js'></script>
 	<script src='/static/js/FirstInterface.js'></script>
